Task8 1) Везде добавил проверки на null, чтобы избежать ошибок при обращении к данным. 2) Переименовал методы для повышения читаемости кода. 3) Удалил комментарии, так как текущая структура кода стала более ясной и не требует дополнительных пояснений. 5) Убрал переменную count, поскольку она была излишней. 6) В методе getDifferentNames для создания множества использовал HashSet, чтобы избежать дубликатов. 7) В методе countEven добавил выбрасывание исключения, если входная коллекция равна null. 8) В методе convertPersonToString исправлена опечатка, теперь учитывается MiddleName.