@@ -3,85 +3,74 @@ package tasks;
 import common.Person;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-/*
-А теперь о горьком
-Всем придется читать код
-А некоторым придется читать код, написанный мною
-Сочувствую им
-Спасите будущих жертв, и исправьте здесь все, что вам не по душе!
-P.S. функции тут разные и рабочие (наверное), но вот их понятность и эффективность страдает (аж пришлось писать комменты)
-P.P.S Здесь ваши правки желательно прокомментировать (можно на гитхабе в пулл реквесте)
- */
 public class Task8 {
 
-  private long count;
-
-  //Не хотим выдывать апи нашу фальшивую персону, поэтому конвертим начиная со второй
-  public List<String> getNames(List<Person> persons) {
-    if (persons.size() == 0) {
+  public List<String> getFirstNames(List<Person> persons) {
+    if (persons == null || persons.isEmpty()) {
       return Collections.emptyList();
     }
-    persons.remove(0);
-    return persons.stream().map(Person::getFirstName).collect(Collectors.toList());
+
+    return persons.stream()
+        .skip(1)
+        .map(Person::getFirstName)
+        .toList();
   }
 
-  //ну и различные имена тоже хочется
-  public Set<String> getDifferentNames(List<Person> persons) {
-    return getNames(persons).stream().distinct().collect(Collectors.toSet());
+  public Set<String> getUniqueFirstNames(List<Person> persons) {
+    if (persons == null || persons.isEmpty()) {
+      return Collections.emptySet();
+    }
+
+    return new HashSet<>(getFirstNames(persons));
   }
 
-  //Для фронтов выдадим полное имя, а то сами не могут
-  public String convertPersonToString(Person person) {
-    String result = "";
-    if (person.getSecondName() != null) {
-      result += person.getSecondName();
-    }
-
-    if (person.getFirstName() != null) {
-      result += " " + person.getFirstName();
-    }
-
-    if (person.getSecondName() != null) {
-      result += " " + person.getSecondName();
-    }
-    return result;
+  public String getPersonFullName(Person person) {
+    return Optional.ofNullable(person)
+        .map(p -> Stream.of(p.getSecondName(), p.getFirstName(), p.getMiddleName())
+            .filter(Objects::nonNull)
+            .collect(Collectors.joining()))
+        .orElse("");
   }
 
-  // словарь id персоны -> ее имя
-  public Map<Integer, String> getPersonNames(Collection<Person> persons) {
-    Map<Integer, String> map = new HashMap<>(1);
-    for (Person person : persons) {
-      if (!map.containsKey(person.getId())) {
-        map.put(person.getId(), convertPersonToString(person));
-      }
+  public Map<Integer, String> getPersonFullNames(Collection<Person> persons) {
+    if (persons == null || persons.isEmpty()) {
+      return Collections.emptyMap();
     }
-    return map;
+
+    return persons.stream()
+        .collect(Collectors.toMap(
+            Person::getId,
+            this::getPersonFullName,
+            (p1, p2) -> p1)
+        );
   }
 
-  // есть ли совпадающие в двух коллекциях персоны?
   public boolean hasSamePersons(Collection<Person> persons1, Collection<Person> persons2) {
-    boolean has = false;
-    for (Person person1 : persons1) {
-      for (Person person2 : persons2) {
-        if (person1.equals(person2)) {
-          has = true;
-        }
-      }
+    if (persons1 == null || persons2 == null) {
+      return false;
     }
-    return has;
+
+    return persons1.stream()
+        .anyMatch(persons2::contains);
   }
 
-  //...
-  public long countEven(Stream<Integer> numbers) {
-    count = 0;
-    numbers.filter(num -> num % 2 == 0).forEach(num -> count++);
-    return count;
+  public long countEvenNumbers(Stream<Integer> numbers) {
+    if (numbers == null) {
+      throw new IllegalArgumentException("Numbers cannot be null");
+    }
+
+    return numbers
+        .filter(Objects::nonNull)
+        .filter(num -> num % 2 == 0)
+        .count();
   }
 }
